--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body bgcolor=#ffffff text=#000080>
 Hello World
+  <P>
+    <img src="Amazon_Web_Services_logo_AWS.png" alt="Amazon Web Services">
 </body>
 </html>
