--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body bgcolor=#ffffff text=#000080>
 Hello World
   <P>
-    <img src="Amazon_Web_Services_logo_AWS.png" alt="Amazon Web Services">
+    <img src="Amazon_Web_Services_logo_AWS.png" alt="Amazon Web Services" height="200" width="300">
 </body>
 </html>
